fix: front page broken css

--- a/assets/scss/layouts/_index.scss
+++ b/assets/scss/layouts/_index.scss
@@ -105,62 +105,7 @@ section.testimonials {
     .testimonial p {
       margin: 8px 0 0 20px;
       text-align: left;
-    }
-  
-  
-    .wrapper{
-      width:100%;
-      padding-top: 20px;
-      text-align:center;
-    }
-    .carousel{
-      width:100%;
-      margin:0px auto;
-    }
-    .slick-slide{
-      margin:10px;
-      img {
-        display: inline;
-      }
-    }
-    .slick-prev, .slick-next{
-      background: #000;
-      border-radius: 15px;
-      border-color: transparent;
-    }
-    .card{
-      border: 2px solid #fff;
-      box-shadow: 1px 1px 15px #ccc;
-    }
-
-    .slick-dots {
-      text-align: center;
-      margin-top: 20px;
-    
-      li {
-        display: inline-block;
-        margin: 0 5px;
-    
-        &.slick-active {
-          button {
-            background-color: $primary;
-          }
-        }
-    
-        button {
-          height: 10px;
-          width: 10px;
-          border-radius: 50%;
-          display: block;
-          color: transparent;
-          padding: 0;
-          border: 1px solid $primary;
-          background-color: transparent;
-          transition: .2s ease;
-        }
-      }
-    }
-    
+    }  
   
   }
 
@@ -171,145 +116,3 @@ section.testimonials {
         padding: 15px 35px;
       }
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /* Slider */
-.slick-slider
-{
-    position: relative;
-
-    display: block;
-    box-sizing: border-box;
-
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list
-{
-    position: relative;
-
-    display: block;
-    overflow: hidden;
-
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-         -o-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-}
-
-.slick-track
-{
-    position: relative;
-    top: 0;
-    left: 0;
-
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-.slick-track:before,
-.slick-track:after
-{
-    display: table;
-
-    content: '';
-}
-.slick-track:after
-{
-    clear: both;
-}
-.slick-loading .slick-track
-{
-    visibility: hidden;
-}
-
-.slick-slide
-{
-    display: none;
-    float: left;
-
-    height: 100%;
-    min-height: 1px;
-}
-[dir='rtl'] .slick-slide
-{
-    float: right;
-}
-.slick-slide img
-{
-    display: block;
-}
-.slick-slide.slick-loading img
-{
-    display: none;
-}
-.slick-slide.dragging img
-{
-    pointer-events: none;
-}
-.slick-initialized .slick-slide
-{
-    display: block;
-}
-.slick-loading .slick-slide
-{
-    visibility: hidden;
-}
-.slick-vertical .slick-slide
-{
-    display: block;
-
-    height: auto;
-
-    border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-    display: none;
-}
